--- a/desktop.Tests/desktop.Tests.csproj
+++ b/desktop.Tests/desktop.Tests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Helpers\Powershell\**" />
+    <EmbeddedResource Remove="Helpers\Powershell\**" />
+    <None Remove="Helpers\Powershell\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="System.Management.Automation" Version="6.0.4" />
     <PackageReference Include="xunit" Version="2.3.1" />
@@ -18,10 +24,6 @@
     <ProjectReference Include="..\..\sunamo\desktop\desktop.csproj" />
     <ProjectReference Include="..\..\sunamo\shared\shared.csproj" />
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Helpers\Powershell\" />
   </ItemGroup>
 
 </Project>
