implement SunamoYaml.Tests

--- a/SunamoYaml.Tests/SunamoYaml.Tests.csproj
+++ b/SunamoYaml.Tests/SunamoYaml.Tests.csproj
@@ -13,4 +13,10 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\sunamo\shared\shared.csproj" />
+    <ProjectReference Include="..\..\sunamo\SunamoYaml\SunamoYaml.csproj" />
+    <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
+  </ItemGroup>
+
 </Project>
