--- a/Roslyn.Tests/Roslyn.Tests.csproj
+++ b/Roslyn.Tests/Roslyn.Tests.csproj
@@ -1,19 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <CodeAnalysisRuleSet>../../sunamo/sunamo.ruleset</CodeAnalysisRuleSet>
+     
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="11\FirstHalfCodeFix.csx" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="11\FirstHalfCodeFix.csx" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="15.9.20" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.3">
@@ -31,10 +28,8 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\sunamo\Roslyn\Roslyn\Roslyn.csproj" />
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
   </ItemGroup>
-
 </Project>
