before replace internal for public

--- a/shared.Tests/shared.Tests.csproj
+++ b/shared.Tests/shared.Tests.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\sunamo\shared\shared.csproj" />
+    <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
+  </ItemGroup>
 </Project>
