--- a/desktop.Tests/desktop.Tests.csproj
+++ b/desktop.Tests/desktop.Tests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDataContainerTests.cs" />
+    <Compile Include="Helpers\Controls\TextBoxHelpersTests.cs" />
     <Compile Include="Helpers\SpecialFoldersHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
