--- a/Roslyn.Tests/Roslyn.Tests.csproj
+++ b/Roslyn.Tests/Roslyn.Tests.csproj
@@ -33,4 +33,9 @@
     <ProjectReference Include="..\..\sunamo\Roslyn\Roslyn\Roslyn.csproj" />
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="PresentationCore">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.1\PresentationCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
