--- a/sunamo.Tests/sunamo.Tests.csproj
+++ b/sunamo.Tests/sunamo.Tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
-      <HintPath>..\..\sunamo\dll\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\..\sunamo\dll\netstandard2.0\HtmlAgilityPack.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
