--- a/sunamo.Tests/sunamo.Tests.csproj
+++ b/sunamo.Tests/sunamo.Tests.csproj
@@ -9,7 +9,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <ItemGroup>
