--- a/sunamo.Tests/sunamo.Tests.csproj
+++ b/sunamo.Tests/sunamo.Tests.csproj
@@ -22,6 +22,7 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\sunamo\core\core.csproj" />
     <ProjectReference Include="..\..\sunamo\shared\shared.csproj" />
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
   </ItemGroup>
