--- a/win.Tests/win.Tests.csproj
+++ b/win.Tests/win.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Helpers\Powershell\PowershellHelperTests.cs" />
     <Compile Include="Helpers\Powershell\PowershellRunnerTests.cs" />
+    <Compile Include="JunctionPointTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TidyExeHelperTests.cs" />
   </ItemGroup>
