--- a/CoreFx.Tests/CoreFx.Tests.csproj
+++ b/CoreFx.Tests/CoreFx.Tests.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\sunamo\shared\shared.csproj" />
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
+    <ProjectReference Include="..\TestValues\TestValues.csproj" />
   </ItemGroup>
 
 </Project>
