--- a/SunamoYaml.Tests/SunamoYaml.Tests.csproj
+++ b/SunamoYaml.Tests/SunamoYaml.Tests.csproj
@@ -15,5 +15,6 @@
     <ProjectReference Include="..\..\sunamo\shared\shared.csproj" />
     <ProjectReference Include="..\..\sunamo\SunamoYaml\SunamoYaml.csproj" />
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj" />
+    <ProjectReference Include="..\TestValues\TestValues.csproj" />
   </ItemGroup>
 </Project>
