--- a/SunamoTidy.Tests/SunamoTidy.Tests.csproj
+++ b/SunamoTidy.Tests/SunamoTidy.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props" Condition="Exists('..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -59,9 +59,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Html2XhtmlHelperTests.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TidyHtml5ManagedRepackHelperTests.cs" />
     <Compile Include="TidyManagedHelperTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="changes.rtf" />
@@ -73,13 +73,13 @@
       <Project>{77719c0d-7c8b-4b9e-a644-aee7ceb35134}</Project>
       <Name>shared</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\sunamo\SunamoTidy\SunamoTidy.csproj">
-      <Project>{b35edc2f-bb57-4610-90db-b1373e8e567d}</Project>
-      <Name>SunamoTidy</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj">
       <Project>{f6f92307-b0b3-4d6c-bd9c-8b5ff5560dcf}</Project>
       <Name>sunamo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\sunamo\SunamoTidy\SunamoTidy.csproj">
+      <Project>{b35edc2f-bb57-4610-90db-b1373e8e567d}</Project>
+      <Name>SunamoTidy</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
