--- a/shared.Tests/shared.Tests.csproj
+++ b/shared.Tests/shared.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props" Condition="Exists('..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -67,13 +67,13 @@
       <Project>{77719c0d-7c8b-4b9e-a644-aee7ceb35134}</Project>
       <Name>shared</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\sunamo\SunamoSqlServer\SunamoSqlServer.csproj">
-      <Project>{c9c1ecc5-2f3b-47f6-947b-931f261c5e2d}</Project>
-      <Name>SunamoSqlServer</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj">
       <Project>{f6f92307-b0b3-4d6c-bd9c-8b5ff5560dcf}</Project>
       <Name>sunamo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\sunamo\SunamoSqlServer\SunamoSqlServer.csproj">
+      <Project>{c9c1ecc5-2f3b-47f6-947b-931f261c5e2d}</Project>
+      <Name>SunamoSqlServer</Name>
     </ProjectReference>
     <ProjectReference Include="..\TestValues\TestValues.csproj">
       <Project>{5F7EB2B6-465B-4F1C-A164-2C933B25F7C1}</Project>
