--- a/CoreFx.Tests2/CoreFx.Tests.csproj
+++ b/CoreFx.Tests2/CoreFx.Tests.csproj
@@ -7,7 +7,7 @@
      
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>DEBUG2;DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.0" />
