--- a/TestValues.Sql/TestValues.Sql.csproj
+++ b/TestValues.Sql/TestValues.Sql.csproj
@@ -47,11 +47,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TablesLTS.cs" />
     <Compile Include="UnitTestInit.cs" />
-    <Compile Include="UnitTestsSqlHelper.cs" />
+    <Compile Include="TestSqlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
