--- a/SunamoSqlServer.Tests/SunamoSqlServer.Tests.csproj
+++ b/SunamoSqlServer.Tests/SunamoSqlServer.Tests.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MSSQL\GeneratorMsSqlTests.cs" />
     <Compile Include="MSStoredProceduresIBaseSharedWithoutSqlData2Tests.cs" />
     <Compile Include="SqlServerHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,6 +88,7 @@
       <Name>TestValues</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
