--- a/TestValues.Sql/TestValues.Sql.csproj
+++ b/TestValues.Sql/TestValues.Sql.csproj
@@ -68,6 +68,10 @@
       <Project>{77719c0d-7c8b-4b9e-a644-aee7ceb35134}</Project>
       <Name>shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\sunamo\SunamoSqlServer\SunamoSqlServer.csproj">
+      <Project>{c9c1ecc5-2f3b-47f6-947b-931f261c5e2d}</Project>
+      <Name>SunamoSqlServer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj">
       <Project>{f6f92307-b0b3-4d6c-bd9c-8b5ff5560dcf}</Project>
       <Name>sunamo</Name>
